# sechat-client

./: C4.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/serverclient/: Cargo.toml
crates/serverclient/src/: generators.rs  handlers.rs  lib.rs  structs.rs
docs/adr/: 001-symmetric-encryption.md  002-embedded-storage.md
