[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Software renderer only (tiny-skia), no wgpu: avoids GPU init hangs on Windows
# under RDP / VMs / weak drivers. A chat UI does not need GPU acceleration.
iced = { version = "0.14.0", default-features = false, features = [
  "tokio",
  "tiny-skia",
  "crisp",
  "web-colors",
  "thread-pool",
  "linux-theme-detection",
  "x11",
  "wayland",
] }
client = { path = "../client" }
crypto = { path = "../crypto" }
hex = "0.4.3"
tokio = { version = "1", features = ["sync"] }
