[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.44", features = ["serde"] }
crypto = { path = "../crypto" }
ed25519-dalek = "2.2.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
x25519-dalek = "2.0.1"
