[package]
name = "serverclient"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-native-roots",
] }
crypto = { path = "../crypto/" }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }
hex = "0.4.3"
chrono = "0.4.44"
ed25519-dalek = "2.2.0"
x25519-dalek = "2.0.1"
sha2 = "0.11.0"
rmp-serde = "1.3.1"
serde_json = "1.0.150"
